# terminal_video_player

./: .gitignore  CMakeLists.txt  GrayFrame.cpp  GrayFrame.h  Makefile  Player.cpp  Player.h  README.md  Terminal.h  Video.cpp  Video.h  Watcher.cpp  Watcher.h  bad_apple.cpp  opencv.h  player.cpp
.cache/clangd/index/: GrayFrame.cpp.22538D4AC64CC045.idx  GrayFrame.h.AA165ED548134E21.idx  Player.cpp.789B636E9D2EEABD.idx  Player.h.772C65FBD6FE9629.idx  Terminal.h.AB599917785FCE1D.idx  Video.cpp.5E8A0C989D2BD369.idx  Video.h.E49D228F84ED2E3C.idx  Watcher.cpp.0327A0CD5DF687FA.idx  Watcher.h.DC438E2A05250D7B.idx  opencv.h.84C1BAEA473CE216.idx  player.cpp.39ECAA2309D534F8.idx
src/: GrayFrame.cpp  Player.cpp  Player.h  Watcher.cpp
tests/: CMakeLists.txt  test_player.cpp
